--- a/Nimble/style/fuentes.css
+++ b/Nimble/style/fuentes.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Maven+Pro:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Carter+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
 @font-face {
 	font-family: Poppins;
@@ -11,5 +12,6 @@
 	font-family: 'Poppins', sans-serif;
 	font-family: 'Maven Pro', sans-serif;
 	font-family: 'Carter One', cursive;
+	font-family: 'Roboto', sans-serif;
 
 */
