--- a/Nimble/admin/style/admin.css
+++ b/Nimble/admin/style/admin.css
@@ -2,6 +2,11 @@ img{
 	pointer-events: none;
 }
 
+p, span{
+	margin: 0;
+	padding: 0;
+}
+
 header{
 	width: 100%;
 	height: 9vh;
@@ -317,7 +322,6 @@ div.dashboard-base{
 div.panel-complete-admin
 div.panel-dashboard{
 	background: #f4f4f4;
-	padding: 10px 20px;
 }
 
 div.header-title-option{
@@ -374,10 +378,9 @@ div.image-user-phofile:hover div.radius-link-user{
 div.targets-contend-dasboard{
 	width: 100%;
 	display: flex;
-	justify-content: center;
-	align-items: flex-start;
 	flex-wrap: wrap;
 	margin-top: 15px;
+	overflow: hidden;
 }
 
 div.targets-contend-dasboard div.card{
@@ -711,4 +714,17 @@ div.card div.buttons-goit button{
 	background: none;
 	outline: 0;
 	cursor: pointer;
+}
+
+div.footer-content-dashboard{
+	width: 100%;
+	padding: 30px 10px 10px;
+}
+
+div.footer-content-dashboard a{
+	font-family: 'Maven Pro', sans-serif;
+	font-size: 12px;
+	margin: 20px;
+	color: #555;
+	text-decoration: none;
 }
