--- a/Nimble/style/estilos_globales.css
+++ b/Nimble/style/estilos_globales.css
@@ -8,3 +8,182 @@
 body{
 	background-color: #fff;
 }
+
+div.contentQuestionOthers{
+	position: fixed;
+	width: 100%;
+	height: 100vh;
+	top: 0;
+	left: 0;
+	z-index: 20;
+	backdrop-filter: blur(2px) brightness(0.6);
+	display: none;
+	justify-content: center;
+	align-items: center;
+	padding: 20px;
+}
+
+/* Footer */
+
+footer{
+	width: 100%;
+	min-height: 40vh;
+background: #ED213A;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #93291E, #ED213A);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #93291E, #ED213A); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	clip-path: polygon(0 0, 100% 15%, 100% 100%, 0% 100%);
+	position: relative;
+	padding: 43px 0 0 0;
+}
+
+div.contentFooter{
+	width: 100%;
+	position: relative;
+}
+
+div.contentFooter div.socialLinksFooter{
+	width: 100%;
+	min-height: 140px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+div.contentFooter div.socialLinksFooter div.content{
+	width: 50%;
+	min-height: 70px;
+	text-align: center;
+}
+
+div.contentFooter div.socialLinksFooter div.content h3{
+	color: #eee;
+}
+
+div.contentFooter div.socialLinksFooter div.content
+div.contentButtons{
+	width: 100%;
+	min-height: 50px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+div.contentFooter div.socialLinksFooter div.content
+div.contentButtons button{
+	font-size: 25px;
+	margin: 15px;
+	background: none;
+	border: none;
+	outline: 0;
+	color: #fff;
+	cursor: pointer;
+}
+
+div.contentFooter div.contentInfoBottom{
+	width: 100%;
+	min-height: 30vh;
+	position: relative;
+	margin-top: 20px;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+div.contentFooter div.contentInfoBottom div.moreInfoCont{
+	width: 40%;
+	min-height: 30vh;
+	padding: 30px;
+}
+
+div.contentFooter h3{
+	color: #eee;
+}
+
+div.contentFooter div.contentInfoBottom div.moreInfoCont p{
+	line-height: 130%;
+	margin-top: 20px;
+	font-family: 'Maven Pro', sans-serif;
+	color: #fff;
+}
+
+div.contentFooter div.contentInfoBottom div.contentSocialLinks-text{
+	width: 30%;
+	position: relative;
+	padding: 30px;
+}
+
+div.contentFooter div.contentInfoBottom div.contentSocialLinks-text
+ul{
+	margin-top: 20px;
+}
+
+div.contentFooter div.contentInfoBottom div.contentSocialLinks-text
+ul li{
+	display: block;
+}
+
+div.contentFooter div.contentInfoBottom div.contentSocialLinks-text
+ul li a{
+	color: #fff;
+	text-decoration: none;
+}
+
+div.contentFooter div.contentInfoBottom div.contactCenter-content{
+	width: 30%;
+	position: relative;
+	padding: 30px;
+}
+
+div.contentFooter div.contentInfoBottom div.contactCenter-content
+div.content div.entradaicontitle{
+	width: 100%;
+	display: flex;
+	align-items: center;
+	color: #fff;
+	font-family: 'Maven Pro', sans-serif;
+	margin: 3px;
+}
+
+div.contentFooter div.contentInfoBottom div.contactCenter-content
+div.content div.entradaicontitle p{
+	line-height: 110%;
+}
+
+div.contentFooter div.contentInfoBottom div.contactCenter-content
+div.content div.entradaicontitle span{
+	margin: 10px;
+}
+
+div.contentFooter div.footerfromfooter{
+	width: 100%;
+	min-height: 40px;
+	padding: 10px 20px;
+	background: #dc3545;
+	display: flex;
+}
+
+div.contentFooter div.footerfromfooter
+div.leftPart{
+	width: 50%;
+	position: relative;
+	color: #fff;
+	font-family: 'Maven Pro', sans-serif;
+	font-size: 15px;
+}
+
+div.contentFooter div.footerfromfooter
+div.rightPart{
+	width: 50%;
+	position: relative;
+	display: flex;
+	justify-content: flex-end;
+	color: #fff;
+}
+
+div.contentFooter div.footerfromfooter
+div.rightPart a{
+	margin: 5px;
+	color: #fff;
+	font-family: 'Maven Pro', sans-serif;
+	font-size: 15px;
+	text-decoration: none;
+}
